clang/test/BSC/Negative/Ownership/RuleCheck/endscope-and-block/endscope-and-block.cbs
// RUN: %clang_cc1 -verify %s

void func1() {
    int num = 1;
    int _Owned * a;         // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    a = (_Owned int *)&num;
}
void func2() {
    int num = 1;
    int * _Owned a;
    a = (int * _Owned)&num;
} 

void func3(int * _Owned a) {
    {
        int * p = (int *)a;
    }
}

void func4(int * _Owned a) {
    {
        int * p = (int *)a;
    }
    {
        int * _Owned q = (int * _Owned)a; 
    } 
}

void func5(int * _Owned a) {
    {
        int * p = (int *)a;
        {
            int * _Owned q = (int * _Owned)p;
        } 
    }
}

void func6(int * _Owned a) {
    {
        int *p = (int *)a;
        {
            int * _Owned q = (int * _Owned)p;
            {}
        } 
    }
}